--- a/bloco_3/dia_2/css-parte2.html
+++ b/bloco_3/dia_2/css-parte2.html
@@ -26,7 +26,7 @@
         p {
             font-weight: 600;
             font-size: 3em;
-            text-decoration: underline overline dotted orange; 
+            text-decoration: underline overline dotted white; 
         }
 
         li {
