--- a/bloco_3/dia_4/index-pratica.html
+++ b/bloco_3/dia_4/index-pratica.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" type="text/css" href="style.css" media="all">
+    <style>
+        * {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+        h1 {
+            text-align: center;
+            
+        }
+
+        nav {
+            margin-left: 10%;
+        }
+    </style>
 </head>
-  <body>
+
+<body>
     <!--insira os elementos aqui-->
     <header>
-        <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+        <h1 id="title">Soco a 80km/h: Conheça o Stomatopoda.</h1>
     </header>
-  </body>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">Sobre</a>
+        <a href="#contact">Contato</a>
+    </nav>
+</body>
+
 </html>
