--- a/bloco_3/dia_4/index-pratica.html
+++ b/bloco_3/dia_4/index-pratica.html
@@ -13,8 +13,21 @@
             
         }
 
+        article {
+            margin-left: 12%;
+        }
+        
         nav {
             margin-left: 10%;
+        }
+        a {
+            color: darkgreen;
+        }
+
+        img {
+            margin-top: 20px;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
 </head>
@@ -25,10 +38,14 @@
         <h1 id="title">Soco a 80km/h: Conheça o Stomatopoda.</h1>
     </header>
     <nav>
-        <a href="#home">Home</a>
+        <a href="#home">Página Inicial</a>
         <a href="#about">Sobre</a>
         <a href="#contact">Contato</a>
     </nav>
+    <article>
+        <img src="https://i.natgeofe.com/n/f46158fc-9bf2-4453-8a15-6b11b323c08e/Peacock-mantis.jpg?wp=1&w=636&h=424" alt="Stomatopoda">
+        <h2>Fatos sobre o Stomatopoda</h2>
+    </article>
 </body>
 
 </html>
