Adicionei a tag section

--- a/bloco_3/dia_4/index-pratica.html
+++ b/bloco_3/dia_4/index-pratica.html
@@ -16,7 +16,7 @@
         article {
             margin-left: 12%;
         }
-        
+
         nav {
             margin-left: 10%;
         }
@@ -45,6 +45,9 @@
     <article>
         <img src="https://i.natgeofe.com/n/f46158fc-9bf2-4453-8a15-6b11b323c08e/Peacock-mantis.jpg?wp=1&w=636&h=424" alt="Stomatopoda">
         <h2>Fatos sobre o Stomatopoda</h2>
+        <section>
+            
+        </section>
     </article>
 </body>
 
