--- a/bloco_3/dia_4/index.html
+++ b/bloco_3/dia_4/index.html
@@ -15,8 +15,7 @@
         }
         ul:nth-child(1) li:nth-child(1) {
             display: block;
-            margin-left: auto;
-            margin-right: auto;
+            margin: auto;
         }
 
         .first {
@@ -46,6 +45,11 @@
         ul li {
             display: inline;
         }
+
+        #podium {
+            display: block;
+            
+        }
     </style>
 </head>
 
@@ -54,7 +58,7 @@
         <h1>Hackathon Results</h1>
     </header>
     <section>
-        <ul>
+        <ul id="podium">
             <li class="first">1º - Equipe 1</li>
             <li class="second">2º - Equipe 2</li>
             <li class="third">3º - Equipe 3</li>
