Applying CSS changes

--- a/bloco_3/dia_4/index-pratica.html
+++ b/bloco_3/dia_4/index-pratica.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="widtd=device-widtd" />
+    <meta name="viewport" content="width=device-width" />
     <style>
         * {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -33,7 +33,9 @@
             width: 90%;
         }
 
-        /* I took this CSS Style table from W3SCHOOLS Website: https://www.w3schools.com/html/tryit.asp?filename=tryhtml_table_intro */
+        /* I took this CSS Style table from W3SCHOOLS Website: 
+            https://www.w3schools.com/html/tryit.asp?filename=tryhtml_table_intro 
+            and I change some things to make sense inside my page */
         table {
             font-family: arial, sans-serif;
             border-collapse: collapse;
@@ -45,17 +47,18 @@
         }
 
         td, th {
-            border: 1px solid #dddddd;
+            border: 1px solid darkgreen;
             text-align: left;
             padding: 8px;
         }
 
         th {
             text-align: center;
+            background-color: lightgreen;
         }
 
         tr:nth-child(even) {
-            background-color: #dddddd;
+            background-color: lightgreen;
         }
         
     </style>
@@ -113,7 +116,7 @@
                 </tr>
             </table>
         </section>
-        
+
     </article>
 </body>
 
