Add paragraphs to sections.

--- a/bloco_3/dia_4/index-pratica.html
+++ b/bloco_3/dia_4/index-pratica.html
@@ -138,11 +138,15 @@
 
         <section>
             <h3 class="subtitle">Stomatopoda Beauty</h3>
+            <p>Stomatopoda have many colors, this is why they are <strong>SOOO PRETTY!</strong></p>
             <a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank"><img src="https://s3.amazonaws.com/theoatmeal-img/comics/mantis_shrimp/mantis_shrimp_3.jpg" alt="Stomatopoda beauty"></a>
         </section>
         
         <section>
             <h3 class="subtitle">Stomatopoda Darkness</h3>
+            <p>Aquários normalmente não abrigam <em>camarões louva-a-deus</em> porque eles tendem a <strong>abater</strong> todas as outras criaturas com as quais compartilham o aquário. E também podem <strong>quebrar</strong> o vidro do aquário.
+                <br><br>
+                <em>"UmDoisTrês Morte!"</em></p>
             <a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank"><img src="https://s3.amazonaws.com/theoatmeal-img/comics/mantis_shrimp/mantis_shrimp2_7.png" alt="Stomatopoda Darkness"></a>
         </section>
 
