Add Scientific name in italic

--- a/bloco_3/dia_4/index-pratica.html
+++ b/bloco_3/dia_4/index-pratica.html
@@ -131,6 +131,10 @@
                             <td>Ordem:</td>
                             <td>Stomatopoda</td>
                         </tr>
+                        <tr>
+                            <td>Nome Científico:</td>
+                            <td><em>Odontodactylus scyllarus</em></td>
+                        </tr>
                     </table>
                 </tr>
             </table>
