Add bibliographic references

--- a/bloco_3/dia_4/index-pratica.html
+++ b/bloco_3/dia_4/index-pratica.html
@@ -154,6 +154,15 @@
             <a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank"><img src="https://s3.amazonaws.com/theoatmeal-img/comics/mantis_shrimp/mantis_shrimp2_7.png" alt="Stomatopoda Darkness"></a>
         </section>
 
+        <section>
+            <h4>Referências Biobliográficas:</h4>
+            <a href="https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder" target="_blank">https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder</a>
+            <br>
+            <a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">https://theoatmeal.com/comics/mantis_shrimp</a>
+            <br>
+            <a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank">https://pt.wikipedia.org/wiki/Stomatopoda</a>
+        </section>
+
     </article>
 </body>
 
