Add aside content and style it

--- a/bloco_3/dia_4/index-pratica.html
+++ b/bloco_3/dia_4/index-pratica.html
@@ -79,6 +79,20 @@
             margin-top: 30px;
             margin-bottom: 0;
         }
+
+        /* Some of the code below I took from https://www.w3schools.com/tags/tryit.asp?filename=tryhtml5_aside2 */
+        aside {
+            padding-left: 20px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            margin-left: 15px;
+            margin-right: 15%;
+            float: right;
+            font-style: italic;
+            background-color: lightgreen;
+            margin-bottom: 100%;
+            margin-top: 7%;
+        }
         
     </style>
 </head>
@@ -93,6 +107,9 @@
         <a href="#about">Sobre</a>
         <a href="#contact">Contato</a>
     </nav>
+    <aside>
+        <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" target="_blank" rel="noopener noreferrer">Veja ao vídeo!</a>
+    </aside>
     <article>
         <h2>Fatos sobre o Stomatopoda</h2>
         <img src="https://i.natgeofe.com/n/f46158fc-9bf2-4453-8a15-6b11b323c08e/Peacock-mantis.jpg?wp=1&w=636&h=424" alt="Stomatopoda">
@@ -155,7 +172,7 @@
         </section>
 
         <section>
-            <h4>Referências Biobliográficas:</h4>
+            <h4>Referências Bibliográficas:</h4>
             <a href="https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder" target="_blank">https://www.nationalgeographic.com/science/article/natures-most-amazing-eyes-just-got-a-bit-weirder</a>
             <br>
             <a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">https://theoatmeal.com/comics/mantis_shrimp</a>
