Solving accessibility problems

--- a/bloco_3/dia_4/index-pratica.html
+++ b/bloco_3/dia_4/index-pratica.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
+  <title>Stomatopoda</title>
   <style>
     * {
       font-family: Verdana, Geneva, Tahoma, sans-serif;
