Change paragraph and subtitle

--- a/bloco_5/part2.html
+++ b/bloco_5/part2.html
@@ -17,6 +17,10 @@
       paragraph.style.color = "red";
       let pageTitle = document.getElementById("page-title");
       pageTitle.style.color = "navy";
+      let secondP = document.getElementById("second-paragraph");
+      secondP.style.width = "10%";
+      let subtitle = document.getElementById("subtitle");
+      subtitle.style.fontSize = "72px";
     </script>
 </body>
 </html>
