Change div to green Trybe color

--- a/bloco_5/dia_1/1_functionOfDOM.html
+++ b/bloco_5/dia_1/1_functionOfDOM.html
@@ -53,6 +53,9 @@
       */
       let p = document.getElementById("vision");
       p.innerText = "Eu me vejo trabalho numa empressa bacana, e conseguindo ter grana para viajar pelo menos 1 vez ao ano";
+			let greenTrybe = document.getElementsByClassName("main-content");
+			greenTrybe[0].style.background = "rgb(76,164,109)";
+			
     </script>
   </body>
 </html>
