Change title text

--- a/bloco_5/dia_1/1_functionOfDOM.html
+++ b/bloco_5/dia_1/1_functionOfDOM.html
@@ -57,6 +57,8 @@
 			greenTrybe[0].style.background = "rgb(76,164,109)";
 			let redCenter = document.getElementsByClassName("center-content");
 			redCenter[0].style.background = "white";
+			let title = document.getElementsByClassName("title");
+			title[0].innerText = "Exercício 5.1 - JavaScript ";
     </script>
   </body>
 </html>
