--- a/bloco_6/form.html
+++ b/bloco_6/form.html
@@ -13,23 +13,23 @@
   <form action="" method="get">
     <fieldset>
       <label for="input-name">Name
-        <input type="text" name="name" id="input-name" maxlength="40" required>
+        <input type="text" name="name" id="input-name" maxlength="40" placeholder="Type your full name" required>
       </label>
       <br>
       <label for="input-email">E-mail
-        <input type="text" name="email" id="input-email" maxlength="50" required>
+        <input type="text" name="email" id="input-email" maxlength="50" placeholder="Type your best e-mail" required>
       </label>
       <br>
       <label for="input-cpf">CPF
-        <input type="text" name="cpf" id="input-cpf" maxlength="11" required>
+        <input type="text" name="cpf" id="input-cpf" maxlength="11" placeholder="123.456.789-00" required>
       </label>
       <br>
       <label for="input-address">Address
-        <input type="text" name="address" id="input-address" maxlength="200" required>
+        <input type="text" name="address" id="input-address" maxlength="200" placeholder="Queens, 402" required>
       </label>
       <br>
       <label for="input-city">City
-        <input type="text" name="city" id="input-city" maxlength="28" required>
+        <input type="text" name="city" id="input-city" maxlength="28" placeholder="New Your City" required>
       </label>
       <br>
       <label for="input-state">State
@@ -46,6 +46,23 @@
         </label>
       </fieldset>
     </fieldset>
+    <fieldset>
+      <label for="input-about">About you
+        <textarea name="about" id="input-about" cols="70" rows="5" required maxlength="1000" placeholder="Type something about you in 1000 characters or less."></textarea>
+      </label>
+      <label for="input-position">Position
+        <input type="text" name="position" id="input-position" maxlength="40" required>
+      </label>
+      <br>
+      <label for="input-description">Position Description
+        <input type="text" name="description" id="input-description" maxlength="500" required>
+      </label>
+      <br>
+      <label for="date-start">Start Date
+        <input type="text" name="start-date" id="date-start" placeholder="dd/mm/yyyy" required>
+      </label>
+    </fieldset>
+    <button type="submit" id="submit-button">Submit</button>
   </form>
 
   <script src="script.js"></script>
