Date Validatio and slash

--- a/bloco_6/form.html
+++ b/bloco_6/form.html
@@ -50,16 +50,17 @@
       <label for="input-about">About you
         <textarea name="about" id="input-about" cols="70" rows="5" required maxlength="1000" placeholder="Type something about you in 1000 characters or less."></textarea>
       </label>
+      <br>
       <label for="input-position">Position
-        <input type="text" name="position" id="input-position" maxlength="40" required>
+        <input type="text" name="position" id="input-position" maxlength="40" required placeholder="Your role">
       </label>
       <br>
       <label for="input-description">Position Description
-        <input type="text" name="description" id="input-description" maxlength="500" required>
+        <input type="text" name="description" id="input-description" maxlength="500" required placeholder="What did you do in your role">
       </label>
       <br>
       <label for="date-start">Start Date
-        <input type="text" name="start-date" id="date-start" placeholder="dd/mm/yyyy" required>
+        <input type="text" name="start-date" id="date-start" maxlength="10" placeholder="dd/mm/yyyy" required>
       </label>
     </fieldset>
     <button type="submit" id="submit-button">Submit</button>
