Add a div with the user data after press submit

--- a/bloco_6/form.html
+++ b/bloco_6/form.html
@@ -11,6 +11,7 @@
 
 <body>
   <form action="" method="get">
+    <h1>Form</h1>
     <fieldset>
       <label for="input-name">Name
         <input type="text" name="name" id="input-name" maxlength="40" placeholder="Type your full name" required>
@@ -48,7 +49,7 @@
     </fieldset>
     <fieldset>
       <label for="input-about">About you
-        <textarea name="about" id="input-about" cols="70" rows="5" required maxlength="1000" placeholder="Type something about you in 1000 characters or less."></textarea>
+        <textarea name="about" id="input-about" cols="50" rows="5" required maxlength="1000" placeholder="Type something about you in 1000 characters or less."></textarea>
       </label>
       <br>
       <label for="input-position">Position
